<resources>
    <string name="app_name">GeoTrax App</string>
    <string name="welcome_text">Find and track geological\n excursions with GeoTrax!</string>
    <string name="view_walk_button">Find an Excursion</string>
    <string name="view_completed_walks_button">View Completed Excursions</string>
    <string name="new_walk_button">Add Your Own Excursion!</string>
    <string name="completed_button">Add excursion to completed list</string>
    <string name="GeoTrax">GeoTrax</string>
    <string name="preference_file_key">COMPLETED</string>
    <string name="completed_page_title">Completed Excursion List</string>
    <string name="excursion_page_title">Choose an Excursion!</string>
    <string name="home_button">Return to GeoTrax Homepage</string>
    <string name="save_new_excursion">Save Your Excursion</string>


    <string name="enter_excursion_title">Your excursion title is entered here</string>
    <string name="enter_excursion_summary">Your excursion summary is entered here</string>

    <string name="select_era_info">Choose below which geological periods are in your excursion</string>
    <string name="Jurassic">Jurassic</string>
    <string name="Palaeogene">Palaeogene</string>
    <string name="Triassic">Triassic</string>
    <string name="Quaternary">Quaternary</string>

    <string name="select_rock_info">Choose below which rock types are in your excursion</string>
    <string name="Basalt">Basalt</string>
    <string name="Sandstone">Sandstone</string>
    <string name="Mudstone">Mudstone</string>

    <string name="choose_excursion_type">Choose Excursion Type</string>
    <string name="Walk">Walk</string>
    <string name="drive_by">Drive By</string>

    <string name="choose_if_walk_complete">Has this excursion been completed?</string>
    <string name="complete">Complete</string>
    <string name="not_complete">Not Complete</string>

    <string name="add_waypoint">Add Directions</string>
    <string name="waypoint_title">Directions</string>

    <string name="walk_counter">Excursions Completed</string>
    <string name="points_counter">Points Collected</string>

    <string name="remove_excursion_button">Remove</string>

    <string name="access_geology_maps">Geology Map</string>
    <string name="mull_geology_map">Mull Geology Map</string>


</resources>
