<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Activities.NewExcursionActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/chooseEraInfoTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amethysta"
        android:gravity="center"
        android:text="@string/select_era_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="253dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/amethysta"
        android:gravity="left|center"
        android:text="@string/choose_if_walk_complete"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="164dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/amethysta"
        android:gravity="left|center"
        android:text="@string/choose_excursion_type"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addNewExcursionButtonId"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="401dp"
        android:fontFamily="@font/amethysta"
        android:text="@string/save_new_excursion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="137dp"
        android:layout_marginBottom="320dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editExcursionTitleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/enter_excursion_title" />

        <EditText
            android:id="@+id/editExcursionSummaryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/enter_excursion_summary" />

        <EditText
            android:id="@+id/editWayPointId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_waypoint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="34dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/chooseRockType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseEraInfoTextViewId">

        <CheckBox
            android:id="@+id/checkBoxQuaternary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amethysta"
            android:text="@string/Quaternary"
            android:onClick="onCheckBoxClicked"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxPalaeogene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amethysta"
            android:text="@string/Palaeogene"
            android:onClick="onCheckBoxClicked"

            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxJurassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amethysta"
            android:text="@string/Jurassic"
            android:onClick="onCheckBoxClicked"

            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxTriassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amethysta"
            android:text="@string/Triassic"
            android:onClick="onCheckBoxClicked"

            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/chooseRockType"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amethysta"
        android:gravity="center"
        android:text="@string/select_rock_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="368dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseRockType"
        app:layout_constraintVertical_bias="0.17">

        <CheckBox
            android:id="@+id/checkBoxBasalt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amethysta"
            android:text="@string/Basalt"
            android:onClick="onCheckBoxClicked"

            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxSandstone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amethysta"
            android:text="@string/Sandstone"
            android:onClick="onCheckBoxClicked"

            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxMudstone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amethysta"
            android:text="@string/Mudstone"
            android:onClick="onCheckBoxClicked"

            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="99dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917">

        <RadioButton
            android:id="@+id/radioButtonWalk"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"

            android:text="@string/Walk" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="144dp"
        android:layout_height="35dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonNotComplete"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amethysta"
            android:text="@string/not_complete"
            android:onClick="onRadioButtonClicked"

            android:textSize="12sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>