<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Activities.CompletedExcursionActivity">

    <TextView
        android:id="@+id/completedExcursionsTitleId"
        android:layout_width="366dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amethysta"
        android:gravity="center"
        android:text="@string/completed_page_title"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/completedListViewId"
        android:layout_width="368dp"
        android:layout_height="308dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/takeMeHomeButtonId"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="448dp"
        android:fontFamily="@font/amethysta"
        android:onClick="onHomeButtonClicked"
        android:text="@string/home_button"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/completedExcursionsTitleId" />

    <TextView
        android:id="@+id/pointsCounterId"
        android:layout_width="361dp"
        android:layout_height="30dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amethysta"
        android:gravity="center"
        android:text="@string/points_counter"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/excursionCountertextViewId" />

    <TextView
        android:id="@+id/excursionCountertextViewId"
        android:layout_width="359dp"
        android:layout_height="24dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amethysta"
        android:gravity="center"
        android:text="@string/walk_counter"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completedListViewId"
        app:layout_constraintVertical_bias="0.523" />
</android.support.constraint.ConstraintLayout>