<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/geologybackground4"
    tools:context=".Activities.HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/GeoTraxInfo"
        android:fontFamily="@font/amethysta"
        android:gravity="center_horizontal|center"
        android:text="@string/welcome_text"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="198dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="212dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/findAWalkButtonId"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:fontFamily="@font/amethysta"
            android:onClick="onFindExcursionButtonClicked"
            android:shadowColor="@android:color/black"
            android:text="@string/view_walk_button"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/viewCompletedWalksButtonId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/viewCompletedWalksButtonId"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/amethysta"
            android:onClick="onCompletedButtonClicked"
            android:paddingBottom="0dp"
            android:text="@string/view_completed_walks_button"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/createNewWalkButtonId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createNewWalkButtonId" />

        <Button
            android:id="@+id/createNewWalkButtonId"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:fontFamily="@font/amethysta"
            android:onClick="onNewExcursionButtonClicked"
            android:text="@string/new_walk_button"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewCompletedWalksButtonId" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="379dp"
        android:layout_height="59dp"
        android:layout_marginBottom="456dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/white_transparent"
        android:fontFamily="@font/amethysta"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/geotrax_logo" />

    <Button
        android:id="@+id/button"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/amethysta"
        android:onClick="onGeologyMapClick"
        android:text="@string/access_geology_maps"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>